toolchains/typescript/tests/snapshots/tier1_sync_test__typescript_toolchain_tier1__route_out_dir_to_cache__adds_when_has_options.snap
---
source: toolchains/typescript/tests/tier1_sync_test.rs
expression: "fs::read_file(sandbox.path().join(\"with-options/tsconfig.json\")).unwrap()"
---
{
  "extends": "../tsconfig.options.json",
  "compilerOptions": {
    "target": "es2020",
    "outDir": "../.moon/cache/types/with-options"
  }
}
