toolchains/typescript/tests/snapshots/tier1_sync_test__typescript_toolchain_tier1__route_out_dir_to_cache__adds_when_no_options.snap
---
source: toolchains/typescript/tests/tier1_sync_test.rs
expression: "fs::read_file(sandbox.path().join(\"no-options/tsconfig.json\")).unwrap()"
---
{
  "compilerOptions": {
    "outDir": "../.moon/cache/types/no-options"
  }
}
