toolchains/typescript/tests/snapshots/tier1_sync_test__typescript_toolchain_tier1__route_out_dir_to_cache__overrides_out_dir.snap
---
source: toolchains/typescript/tests/tier1_sync_test.rs
expression: "fs::read_file(sandbox.path().join(\"out-dir/tsconfig.json\")).unwrap()"
---
{
  "compilerOptions": {
    "outDir": "../.moon/cache/types/out-dir"
  }
}
